refactor: 낙찰자와 미낙찰자들을 한번에 가져오는 구조로 수정
(#77)